--- a/queries.yaml
+++ b/queries.yaml
@@ -15,9 +15,13 @@ queries:
   - title: Next
     query: query_id=794
     max: 64
-  - title: Only workable from backlog
-    query: query_id=478
-    max: 39
+  - title: Workable Dev Backlog
+    query: query_id=1192
+    max: 20
+    min: 11
+  - title: Workable Infra Backlog
+    query: query_id=1195
+    max: 20
     min: 11
   - title: Exceeding Due Date
     query: query_id=514
